Fix some responsive design

--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,6 +1,6 @@
 {
-  "about-me": "Sobre mí",
-  "my-work": "Mi trabajo",
-  "get-in-touch": "Contáctame",
+  "about-me": "Sobre mi",
+  "my-work": "Proyectos",
+  "get-in-touch": "Contacto",
   "blog": "Blog"
 }
