--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -2,13 +2,13 @@
   "header": {
     "hello": "Hey!",
     "i-am": "I am",
-    "subtitle": "A developer who specializes in building exceptional (and fun!) experiences for the web",
+    "subtitle": "A full stack developer who specializes in building exceptional (and fun!) experiences for the web",
     "question": "Want to talk?",
     "contact-me": "Send me a message"
   },
   "who-am-i": {
     "title": "So, <0>about me</0>",
-    "content-1": "Javier Segovia. A developer of 24 years old based in Venezuela.",
+    "content-1": "I am Javier Segovia. A developer of {{age}} years old based in Venezuela.",
     "content-2": "Back in 2016, I started my career as a developer without even realizing it. I tried to build a web page with basic HTML, CSS and Javascript just as a hobby. I found out that programming was actually fun. So I kept learning, practicing, and hacking things.",
     "content-3": "Since then, I’ve had diverse experiences in the development world: from working with multiple clients as an indie freelancer, to be part of a whole team of amazing developers following an agile methodology.",
     "content-4": "Today, these are some of the tools that I have experience with:"
