--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -2,13 +2,13 @@
   "header": {
     "hello": "Hola!",
     "i-am": "Soy",
-    "subtitle": "Un desarrollador especialista en construir experiencias excepcionales para la web",
+    "subtitle": "Un desarrollador Full Stack especialista en construir experiencias excepcionales para la web",
     "question": "¿Quieres hablar?",
     "contact-me": "Contáctame"
   },
   "who-am-i": {
     "title": "Sobre <0> mi</0>",
-    "content-1": "Javier Segovia. Un desarrollador venezolano de 24 años",
+    "content-1": "Mi nombre es Javier Segovia, un placer. Soy un desarrollador de {{age}} años que vive en Caracas, Venezuela.",
     "content-2": "En 2016, I started my career as a developer without even realizing it. I tried to build a web page with basic HTML, CSS and Javascript just as a hobby. I found out that programming was actually fun. So I kept learning, practicing, and hacking things.",
     "content-3": "Since then, I’ve had diverse experiences in the development world: from working with multiple clients as an indie freelancer, to be part of a whole team of amazing developers following an agile methodology.",
     "content-4": "Today, these are some of the tools that I have experience with:"
@@ -39,8 +39,8 @@
     "call-to-action": "¡Conversemos!"
   },
   "send-message": {
-    "title": "Contáctame",
-    "subtitle": "¿Algo que quieras decir? ¡Contento de escucharte!",
+    "title": "Contacto",
+    "subtitle": "Deja tu mensaje \n ¡No tardo en responder!",
     "submit": "Enviar",
     "fields": {
       "name": {
