--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,4 +1,5 @@
 {
+  "title": "Javier Segovia - Desarrollador web",
   "about-me": "Sobre mí",
   "my-work": "Proyectos",
   "get-in-touch": "Contacto",
