--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,4 +1,5 @@
 {
+  "title": "Javier Segovia - Web developer",
   "about-me": "About me",
   "my-work": "My work",
   "get-in-touch": "Get in touch",
