Fix browser some compatibilities

--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -11,10 +11,10 @@
     "i-am": "Soy",
     "subtitle": "Un desarrollador full-stack especialista en construir experiencias excepcionales para la web",
     "question": "¿Quieres hablar?",
-    "contact-me": "Contactame"
+    "contact-me": "Contáctame"
   },
   "who-am-i": {
-    "title": "Sobre <0> mi</0>",
+    "title": "Sobre <0> mí</0>",
     "content-1": "Mi nombre es Javier Segovia. Soy un desarrollador full-stack de {{age}} años que disfruta colaborar con distintos equipos alrededor del mundo.",
     "content-2": "Trabajo como desarrollador desde 2016, cuando por simple curiosidad creé mi primera página web. Me pareció divertido, así que investigué para aprender más del tema.",
     "content-3": "Desde entonces, me he enfocado en pulir mis habilidades como desarrollador, aprendiendo nuevas tecnologías y colaborando con distintos equipos para crear sitios y aplicaciones web tan útiles como interesantes.",
