Update whoAmI text description

--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -16,8 +16,8 @@
   "who-am-i": {
     "title": "So, <0>about me</0>",
     "content-1": "I am Javier Segovia. A developer of {{age}} years old based in Venezuela.",
-    "content-2": "Back in 2016, I started my career as a developer without even realizing it. I tried to build a web page with basic HTML, CSS and Javascript just as a hobby. I found out that programming was actually fun. So I kept learning, practicing, and hacking things.",
-    "content-3": "Since then, I’ve had diverse experiences in the development world: from working with multiple clients as an indie freelancer, to be part of a whole team of amazing developers following an agile methodology.",
+    "content-2": "I have been working as a developer since 2016, when out of curiosity I created my first website. I found out that coding was actually fun, so I did some research to learn more about it. I kept learning, practicing, and trying to improve. I wanted to get better at it.",
+    "content-3": "Since then, I have had multiple experiences working as a developer, I have learned new technologies (I still do) and I have collaborated with different teams to create interesting and useful websites and applications. I am confident about my current skills, but I think I will always be a student (especially in this area of work, where everything is moving fast).",
     "content-4": "Today, these are some of the tools that I have experience with:"
   },
   "my-work": {
