--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -16,8 +16,8 @@
   "who-am-i": {
     "title": "Sobre <0> mí</0>",
     "content-1": "Mi nombre es Javier Segovia. Soy un desarrollador full-stack de {{age}} años que disfruta colaborar con distintos equipos alrededor del mundo.",
-    "content-2": "Trabajo como desarrollador desde 2016, cuando por simple curiosidad creé mi primera página web. Me pareció divertido, así que investigué para aprender más del tema.",
-    "content-3": "Desde entonces, me he enfocado en pulir mis habilidades como desarrollador, aprendiendo nuevas tecnologías y colaborando con distintos equipos para crear sitios y aplicaciones web tan útiles como interesantes.",
+    "content-2": "Trabajo como desarrollador desde 2016, cuando por simple curiosidad creé mi primera página web. Me pareció divertido, así que investigué para aprender más del tema. Me centré en aprender, practicar, y priorizar un crecimiento constante. Quería mejorar.",
+    "content-3": "Desde entonces, he tenido múltiples experiencias trabajando como desarrollador, he aprendido nuevas tecnologías (todavía lo hago) y he colaborado con distintos equipos para crear sitios y aplicaciones web tan útiles como interesantes. Confío en mis habilidades actuales, pero creo que siempre seré un estudiante (especialmente en esta área de trabajo, donde todo avanza rápido)",
     "content-4": "A día de hoy, estas son algunas de las tecnologías y herramientas que manejo:"
   },
   "my-work": {
